--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,16 @@
 			</execution>
 		</executions>
 		</plugin>
-
+   <plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.2</version>
+  <configuration>
+       <url>http://localhost:8000/manager/text</url>
+       <username>admin</username>
+       <password>admin</password>
+  </configuration>
+ </plugin>
     </plugins>
 
     <pluginManagement>
