--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
        <password>admin</password>
   </configuration>
  </plugin>
+<plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.4.0.905</version>
+</plugin>
     </plugins>
 
     <pluginManagement>
