--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,16 @@
           <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
+	    <plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.2</version>
+  <configuration>
+       <url>http://localhost:8000/manager/text</url>
+       <username>admin</username>
+       <password>admin</password>
+  </configuration>
+ </plugin>
 
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
